// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VisualRegression – Snapshots > Badge matches snapshot for each color 1`] = `
<span
  class="badge badge--green"
  data-testid="badge"
  style="background-color: var(--badge-green);"
>
  GREEN
</span>
`;

exports[`VisualRegression – Snapshots > Badge matches snapshot for each color 2`] = `
<span
  class="badge badge--red"
  data-testid="badge"
  style="background-color: var(--badge-red);"
>
  RED
</span>
`;

exports[`VisualRegression – Snapshots > Badge matches snapshot for each color 3`] = `
<span
  class="badge badge--yellow"
  data-testid="badge"
  style="background-color: var(--badge-yellow);"
>
  YELLOW
</span>
`;

exports[`VisualRegression – Snapshots > Badge matches snapshot for each color 4`] = `
<span
  class="badge badge--blue"
  data-testid="badge"
  style="background-color: var(--badge-blue);"
>
  BLUE
</span>
`;

exports[`VisualRegression – Snapshots > Card (compact variant) matches snapshot 1`] = `
<article
  aria-label="Compact"
  class="card card--compact"
  data-testid="card"
  role="article"
>
  <h2
    data-testid="card-title"
  >
    Compact
  </h2>
  <p
    data-testid="card-desc"
  >
    Compact card
  </p>
</article>
`;

exports[`VisualRegression – Snapshots > Card (default variant) matches snapshot 1`] = `
<article
  aria-label="Hello World"
  class="card card--default"
  data-testid="card"
  role="article"
>
  <h2
    data-testid="card-title"
  >
    Hello World
  </h2>
  <p
    data-testid="card-desc"
  >
    A test card
  </p>
</article>
`;

exports[`VisualRegression – Snapshots > Card (featured variant) matches snapshot 1`] = `
<article
  aria-label="Featured"
  class="card card--featured"
  data-testid="card"
  role="article"
>
  <h2
    data-testid="card-title"
  >
    Featured
  </h2>
  <p
    data-testid="card-desc"
  >
    Featured card
  </p>
</article>
`;

exports[`VisualRegression – Snapshots > ThemeWrapper dark mode matches snapshot 1`] = `
<div
  class="theme-dark"
  data-testid="theme-wrapper"
  data-theme="dark"
  style="--bg: #1a1a1a; --fg: #f0f0f0; --accent: #4dabf7;"
>
  <span>
    Content
  </span>
</div>
`;

exports[`VisualRegression – Snapshots > ThemeWrapper light mode matches snapshot 1`] = `
<div
  class="theme-light"
  data-testid="theme-wrapper"
  data-theme="light"
  style="--bg: #ffffff; --fg: #111111; --accent: #0066cc;"
>
  <span>
    Content
  </span>
</div>
`;
